# weather-data-pipeline

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_GUIDE.md  Dockerfile  GITHUB_CHECKLIST.md  LICENSE  MODERNIZATION_SUMMARY.md  PROJECT_STATUS_UPDATE.md  PUSH_SUMMARY.md  README.md  SECURITY.md  api.py  build.sh  data_processor.mojo  database.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pixi.toml  pyproject.toml  requirements.txt  setup.sh  start_pipeline.sh  streamlit_app.py  test_api.py  test_mojo_syntax.py  test_pipeline.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance.md
.github/workflows/: ci.yml
config/nginx/: nginx.conf
docs/: API.md  INSTALL.md  MOJO_INSTALLATION.md  README.md  STRUCTURE_TRANSFORMATION.md
scripts/: start_pipeline.sh  validate_structure.sh
src/: __init__.py
src/api/: __init__.py  server.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  database.py
src/processors/: __init__.py  pipeline.py  weather_processor.mojo
tests/: test_api_server.py
